fix(theme): fix toc z-index, close #4195

--- a/packages/theme/src/client/modules/sidebar/styles/sidebar.scss
+++ b/packages/theme/src/client/modules/sidebar/styles/sidebar.scss
@@ -76,7 +76,7 @@
 .vp-sidebar-mask {
   position: fixed;
   inset: 0;
-  z-index: 9;
+  z-index: 100;
   background: rgb(0 0 0 / 15%);
 
   &.fade-enter-active,
